<resources>
    <string name="app_name">Alert Patient</string>
    <string name="txt_salir">Salir</string>
    <string name="digite_su_clave">Digite su clave.....</string>
    <string name="digite_su_nombre">Digite su nombre....</string>
    <string name="digite_su_correo">Digite su correo....</string>
    <string name="digite_a_que_se_dedica">Digite a que se dedica....</string>
    <string name="digite_su_edad">Digite su edad....</string>
    <string name="cancelar">Cancelar</string>
    <string name="tipo_de_usuario">Tipo de usuario:</string>
    <string name="salir">Salir</string>
    <string name="password">Password...</string>
    <string name="registrar_usuario">Registrar usuario</string>


    <string-array name="usuarios_array">
        <item>Doctor</item>
        <item>Paciente</item>
    </string-array>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>