<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_7"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="310sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@drawable/customer_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:src="@drawable/icono_registro" />

            <EditText
                android:id="@+id/txt_correo"
                android:layout_width="250sp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/customer_edittext"
                android:drawableLeft="@drawable/ic_correo"
                android:drawablePadding="8dp"
                android:hint="@string/digite_su_correo"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="#EA9C89" />

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="250sp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/customer_edittext"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="8sp"
                android:hint="@string/digite_su_nombre"
                android:inputType="text"
                android:padding="8sp"
                android:textColorHint="#EA9C89" />

            <EditText
                android:id="@+id/txt_edad"
                android:layout_width="250sp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/customer_edittext"
                android:drawableStart="@drawable/ic_edad"
                android:drawablePadding="8sp"
                android:hint="@string/digite_su_edad"
                android:inputType="number"
                android:padding="8sp"
                android:textColorHint="#EA9C89" />

            <EditText
                android:id="@+id/txt_profesion"
                android:layout_width="250sp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/customer_edittext"
                android:drawableStart="@drawable/ic_trabajo"
                android:drawablePadding="8sp"
                android:hint="@string/digite_a_que_se_dedica"
                android:inputType="text"
                android:padding="8sp"
                android:textColorHint="#EA9C89" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_marginLeft="27sp"
                android:layout_marginRight="27sp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/rojo"
                    android:hint="@string/tipo_de_usuario"
                    app:startIconDrawable="@drawable/ic_tipouser">

                    <AutoCompleteTextView
                        android:id="@+id/Auto_Comp_TipoUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="250sp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/customer_edittext"
                android:drawableStart="@drawable/ic_pssperson"
                android:drawablePadding="8sp"
                android:hint="@string/digite_su_clave"
                android:inputType="text"
                android:padding="8sp"
                android:textColorHint="#EA9C89"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:backgroundTint="#f00"
        android:drawableLeft="@drawable/ic_registro"
        android:text="@string/registrar_usuario"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/btn_cancelar_registro"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:backgroundTint="#f00"
        android:drawableLeft="@drawable/ic_cancelar"
        android:text="@string/cancelar"
        app:cornerRadius="30sp" />


</LinearLayout>
